--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_DSN=
+DATABASE_DSN=postgres://bookituser:Lenger1992@localhost:6432/bookitdb?sslmode=disable
 
-BASE_URL=
-IMAGE_BASE_URL=
+BASE_URL=http://localhost:8000/api/v1
+IMAGE_BASE_URL=http://localhost:8000/media
