--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_DSN=postgres://bookituser:Lenger1992@localhost:6432/bookitdb?sslmode=di
 
 BASE_URL=http://localhost:8000/api/v1
 IMAGE_BASE_URL=http://localhost:8000/media
+
+JWT_SECRET_KEY=
