--- a/app/Makefile
+++ b/app/Makefile
@@ -16,6 +16,8 @@ run: ## Run go server
 	go run ./cmd/main.go
 build: ## Build project
 	go build -o ./bin/bookit ./cmd/main.go
+swagger: ## Generate swagger
+	/Users/run/GO/bin/swag init -g ./cmd/main.go -o ./docs
 test: ## Run all tests
 	go test -v -race -timeout 30s ./...
 
